--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     - REALM="unviersity.ac.kr"
     volumes:
     - ./freeradius_conf/proxy.conf:/etc/freeradius/proxy.conf
-    - ./mysql_data:/var/lib/mysql
+    - mysql_data:/var/lib/mysql
     depends_on:
     - keduroam-rest
     # - oracledb
