--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,20 @@ services:
   keduroam-rest:
     container_name: keduroam-rest
     image: chrisryu/keduroam-rest:latest
+    build: ../REST-API-FreeRADIUS
     ports:
     - 4000:4000
     - 27017:27017
     volumes:
     - ./mongodb_data:/app/mongodb_data
+    environment: 
+    - USER_NAME=
+    - PASSWORD=
+    - DATABASE=XEPDB1
+    - HOST=
+    - POSRT=32518
+    - DB_TYPE=oracle
+    - ATUH_QUERY="SELECT * FROM users WHERE username = :username and PASSWORD=DBMS_CRYPTO.HASH(UTL_I18N.STRING_TO_RAW(:password, 'AL32UTF8'), 4)"
             
   keduroam-grafana-graphite:
     image: kamon/grafana_graphite
