--- a/envs/db_server_oracle.env
+++ b/envs/db_server_oracle.env
@@ -4,4 +4,4 @@ DATABASE=XEPDB1
 HOST=
 DB_PORT=32518
 DB_TYPE=oracle
-AUTH_QUERY=SELECT * FROM users WHERE username = ':username' and PASSWORD=DBMS_CRYPTO.HASH(UTL_I18N.STRING_TO_RAW(':password', 'AL32UTF8'), 4)
+AUTH_QUERY=
