--- a/envs/keduroam.env
+++ b/envs/keduroam.env
@@ -2,6 +2,6 @@ NO_OF_FLR_SERVERS=1
 EDUROAM_FLR1=192.168.100.102
 EDUROAM_FLR2=192.168.100.110
 FLR_EDUROAM_SECRET=krsecret
-YOUR_REALM=
+YOUR_REALM=songwon.ac.kr
 TEST_PASSWORD=testing123
 ENVIRONMENT=TEST
