--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     - ./envs/global.env
     volumes:
     - mysql_data:/var/lib/mysql
-    - /etc/localtime:/etc/localtime:ro
+    - /:/rootfs:ro
     depends_on:
     - keduroam-rest
     # - oracledb
@@ -23,6 +23,8 @@ services:
     restart: always
     container_name: keduroam-rest
     image: chrisryu/keduroam-rest:latest
+    env_file: 
+    - ./envs/global.env
     ports:
     - 4000:4000
     - 27017:27017
@@ -31,9 +33,9 @@ services:
     env_file:
     - ./envs/db_server_oracle.env
 
-  keduroam-grafana-dashboard:
-    image: kamon/grafana_graphite
-    container_name: kamon-grafana-dashboard
+  keduroam-dashboard:
+    image: chrisryu/grafana_graphite:latest
+    container_name: keduroam-dashboard
     ports:
       - '8080:80'
       - '81:81'
@@ -44,10 +46,10 @@ services:
     #   - keduroam-rest
     #   - keduroam-radius
     volumes:
-      - ./docker-grafana-graphite/data/whisper:/opt/graphite/storage/whisper
-      - ./docker-grafana-graphite/data/grafana:/opt/grafana/data
-      - ./docker-grafana-graphite/log/graphite:/opt/graphite/storage/log
-      - ./docker-grafana-graphite/log/supervisor:/var/log/supervisor
+      - ./dashboard_state/data/whisper:/opt/graphite/storage/whisper
+      - ./dashboard_state/data/grafana:/opt/grafana/data
+      - ./dashboard_state/log/graphite:/opt/graphite/storage/log
+      - ./dashboard_state/log/supervisor:/var/log/supervisor
 
 volumes:       
   mongodb_data:
