--- a/envs/keduroam.env
+++ b/envs/keduroam.env
@@ -5,3 +5,5 @@ FLR_EDUROAM_SECRET=krsecret
 YOUR_REALM=songwon.ac.kr
 TEST_PASSWORD=testing123
 ENVIRONMENT=TEST
+ROAM_TEST_ACCT=
+ROAM_TEST_PASSWORD=
