--- a/envs/keduroam.env
+++ b/envs/keduroam.env
@@ -4,6 +4,6 @@ EDUROAM_FLR2=192.168.100.110
 FLR_EDUROAM_SECRET=krsecret
 YOUR_REALM=songwon.ac.kr
 TEST_PASSWORD=testing123
-ENVIRONMENT=TEST
+ENVIRONMENT=PRODUCTION
 ROAM_TEST_ACCT=
 ROAM_TEST_PASSWORD=
