--- a/envs/keduroam.env
+++ b/envs/keduroam.env
@@ -2,8 +2,8 @@ NO_OF_FLR_SERVERS=1
 EDUROAM_FLR1=192.168.100.102
 EDUROAM_FLR2=192.168.100.110
 FLR_EDUROAM_SECRET=krsecret
-YOUR_REALM=songwon.ac.kr
-TEST_PASSWORD=testing123
-ENVIRONMENT=PRODUCTION
+YOUR_REALM=univ.ac.kr
+TEST_PASSWORD=
+ENVIRONMENT=TEST
 ROAM_TEST_ACCT=
 ROAM_TEST_PASSWORD=
